Last of the services completed at a low level.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
             "CH\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "ext-curl": "*",
+        "ext-json": "*"
+    }
 }
