--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "php" : ">=7.3",
         "ext-curl": "*",
         "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.2"
     }
 }
